fixed overflow for families module.

--- a/components/com_manager/modules/families/css/jmb.families.css
+++ b/components/com_manager/modules/families/css/jmb.families.css
@@ -1,5 +1,6 @@
 #JMBFamiliesContainer {
 	position:relative;
+    overflow: hidden;
 }
 .jmb-families-body{}
 #JMBFamiliesContainer .home{
